Full native (java) launcher scripts